# ARK-company

./: Information.txt  LICENSE  README.md  crc.h
Game/: CMakeLists.txt  main.cpp
Game/VersionWithout_music/: NotMain.cpp  main.cpp
Game/src/: main.cpp
Main_Project_directory/Khalid/: Sixteen_to_ten.cpp
Main_Project_directory/Project/Core_of_GUI/: COM-ports(MAIN).cpp  Converter.h  MiniMain.cpp  PortInfo.h  PortScanner.h  SerialDriver.h
Main_Project_directory/Tests/: What_tests_are_needed.ipynb  crc.cpp
Useful_info/Мануал/: main.tex
Промежуточная/: Instruction.txt  Khalid.cpp  Khalid.txt  Kirito.cpp  SAO1.cpp  StarCraft.lnk  firstCpp.cpp  game  main.cpp
